# decolor

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: example.rs  macros.rs
