[package]
name = "decolor"
description = "Dead simple, minimal SPDX License generator library written in Rust."
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["refcell"]
rust-version = "1.72"
keywords = ["decolor", "generator", "license", "spdx", "library"]
categories = ["library"]
homepage = "https://github.com/refcell/decolor"
repository = "https://github.com/refcell/decolor"
exclude = ["benches/", "tests/"]

[dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.33.0", features = ["full"] }
