[package]
name = "decolor"
description = ""
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["refcell"]
rust-version = "1.72"
keywords = ["decolor", "async", "color", "macro", "library"]
categories = ["library"]
homepage = "https://github.com/refcell/decolor"
repository = "https://github.com/refcell/decolor"
exclude = ["benches/", "tests/"]

[dependencies]
anyhow = "1.0.75"
tokio = { version = "1.33.0", features = ["full"] }

[dev-dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
