[package]
name = "decolor"
description = "Asynchronous runtime abstractions for implicit function decoloring."
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["refcell"]
rust-version = "1.72"
keywords = ["decolor", "async", "color", "macro", "library"]
categories = ["asynchronous", "development-tools::procedural-macro-helpers"]
homepage = "https://github.com/refcell/decolor"
repository = "https://github.com/refcell/decolor"
exclude = ["benches/", "tests/"]

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
tokio = { version = "1.33", features = ["full"] }
